# go-feature-flag

./: .gitattributes  .gitignore  .gitmodules  .golangci.bck.yml  .golangci.yml  .goreleaser-cli.yaml  .goreleaser-editor.yaml  .goreleaser.yaml  .kodiak.toml  .pre-commit-config.yaml  .sonarcloud.properties  .travis.yml  .worktreeinclude  404.html  ADOPTERS.md  AGENTS.md  API_relayproxy.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MISSING_TESTS.md  Makefile  README.md  SECURITY.md  SOLUTION_SUMMARY.md  algolia-verification.html  background_updater.go  blog.html  codecov.yml  config.go  config_collector.go  config_exporter.go  config_test.go  coverage.cov.tmp  coverage.html  coverage.out  detectRaces.sh  doc.go  doc.yml  docs.html  (+54 more)
blog/: atom.xml  (+8 more)
openfeature/providers/python-provider/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  hatch_build.py  pyproject.toml
openfeature/providers/python-provider/examples/: basic_usage.py  validation_example.py
openfeature/providers/python-provider/gofeatureflag_python_provider/: __init__.py  data_collector_hook.py  exceptions.py  metadata.py  options.py  provider.py  provider_old.py  provider_options.py  provider_status.py  request_data_collector.py  request_flag_evaluation.py  response_flag_evaluation.py
openfeature/providers/python-provider/gofeatureflag_python_provider/evaluator/: __init__.py  abstract_evaluator.py  evaluator.py  inprocess_evaluator.py  remote_evaluator.py
openfeature/providers/python-provider/gofeatureflag_python_provider/exception/: __init__.py  flag_configuration_endpoint_not_found_exception.py  go_feature_flag_exception.py  impossible_to_retrieve_configuration_exception.py  impossible_to_send_data_to_collector_exception.py  invalid_options_exception.py  unauthorized_exception.py
openfeature/providers/python-provider/gofeatureflag_python_provider/hooks/: __init__.py  data_collector.py  enrich_evaluation_context.py
openfeature/providers/python-provider/gofeatureflag_python_provider/model/: __init__.py  evaluation_response.py  evaluation_type.py  event.py  experimentation_rollout.py  exporter_metadata.py  exporter_request.py  feature_event.py  flag.py  flag_base.py  flag_config_request.py  flag_config_response.py  flag_context.py  progressive_rollout.py  progressive_rollout_step.py  rule.py  scheduled_step.py  tracking_event.py  wasm_input.py
openfeature/providers/python-provider/gofeatureflag_python_provider/service/: api.py
openfeature/providers/python-provider/gofeatureflag_python_provider/services/: __init__.py  api.py  event_publisher.py  models.py
openfeature/providers/python-provider/gofeatureflag_python_provider/wasm/: __init__.py  evaluate_wasm.py  gofeatureflag-evaluation_0.2.0.wasi  models.py
openfeature/providers/python-provider/tests/: config.goff.yaml  conftest.py  docker-compose.yml  fixtures.py  test_data_collector_hook.py  test_enrich_evaluation_context_hook.py  test_evaluate_wasm.py  test_event_publisher.py  test_gofeatureflag_provider.py  test_gofeatureflag_provider_inprocess.py  test_gofeatureflag_python_provider.py  test_inprocess_evaluator.py  test_provider.py  test_provider_fixture.py  test_provider_graceful_exit.py  test_provider_options.py  test_real.py  test_remote_evaluator_ofrep.py  test_services_api.py  test_wasm_trap_diagnosis.py  test_websocket_cache_invalidation.py  wasm_helpers.py
openfeature/providers/python-provider/tests/mock_responses/: bool_targeting_match.json  bool_targeting_match_no_error_field.json  disabled_bool.json  disabled_float.json  disabled_int.json  disabled_object.json  disabled_string.json  double_key.json  flag_not_found.json  integer_key.json  invalid_json_body.json  list_key.json  object_key.json  string_key.json  unknown_reason.json
openfeature/providers/python-provider/tests/mock_responses/config/: valid-all-types-config-change.json  valid-all-types.json  valid-flag-config.json  valid-scheduled-rollout.json
openfeature/providers/python-provider/tests/mock_responses/data-collector/request/: single_event_list.json  (+2 more)
openfeature/providers/python-provider/tests/mock_responses/flag-configuration/: change-config-after.json  change-config-before.json  default.json  scheduled-rollout.json
openfeature/providers/python-provider/tests/mock_responses/ofrep/: bool_targeting_match_no_error_field.json  disabled_float.json  disabled_object.json  flag_not_found.json  invalid_json_body.json  object_key.json  unknown_reason.json
openfeature/providers/python-provider/tests/mock_responses/ofrep-response/: README.md  api_key_missing.json  bool_targeting_match.json  disabled.json  disabled_double.json  disabled_integer.json  disabled_object.json  disabled_string.json  does_not_exists.json  double_key.json  fail_500.json  flag_not_found.json  integer_key.json  integer_with_metadata.json  invalid_api_key.json  list_key.json  object_key.json  string_key.json  unknown_reason.json
openfeature/providers/python-provider/tests/service/: test_api.py
openfeature/providers/python-provider/wasm/: gofeatureflag-evaluation_v1.45.6.wasm
(+22045 files in other folders)
