[tool.poetry]
name = "gofeatureflag-python-provider"
version = "0.0.1"
description = "GO Feature Flag provider for OpenFeature"
license = "Apache-2.0"
authors = ["Thomas Poignant"]
readme = "README.md"
homepage = "https://gofeatureflag.org"
repository = "https://github.com/thomaspoignant/go-feature-flag"
documentation = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"
keywords = ["feature flags", "feature toggles", "go-feature-flag", "gofeatureflag", "openfeature", "open-feature"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/thomaspoignant/go-feature-flag/issues"
"Source Code" = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"
Documentation = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"


[tool.poetry.dependencies]
python = "^3.9"
openfeature-sdk = "^0.4.1"
pydantic = "^2.5.2"
urllib3 = "^2.1.0"
pylru = "^1.2.1"
websocket-client = "^1.6.4"
rel = "^0.4.9"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.10.1"


[tool.poetry.group.dev.dependencies]
websocket-server = "^0.6.4"
asyncio = "^3.4.3"
websockets = "^12.0"
pytest-asyncio = "^0.21.1"
pywsitest = "^0.3.8"
pytest-docker = "^2.0.1"
testcontainers = "^3.7.1"
simplewebsocketserver = "^0.1.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
