[tool.poetry]
name = "gofeatureflag-python-provider"
version = "0.5.1"
description = "GO Feature Flag provider for OpenFeature"
license = "Apache-2.0"
authors = ["Thomas Poignant"]
readme = "README.md"
homepage = "https://gofeatureflag.org"
repository = "https://github.com/thomaspoignant/go-feature-flag"
documentation = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"
keywords = ["feature flags", "feature toggles", "go-feature-flag", "gofeatureflag", "openfeature", "open-feature"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/thomaspoignant/go-feature-flag/issues"
"Source Code" = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"
Documentation = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"


[tool.poetry.dependencies]
python = "^3.9"
openfeature-sdk = ">=0.5.0,<0.9.0"
pydantic = "^2.5.2"
urllib3 = "^2.1.0"
pylru = "^1.2.1"
websocket-client = "^1.6.4"
rel = "^0.4.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
black = ">=23.10.1,<26.0.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
pytest-docker = ">=2.0.1,<4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
