[project]
name = "gofeatureflag-python-provider"
version = "0.5.0"
wasm_version = "0.2.0"
description = "GO Feature Flag provider for OpenFeature"
license = "Apache-2.0"
authors = [{ name = "Thomas Poignant" }]
readme = "README.md"
homepage = "https://gofeatureflag.org"
repository = "https://github.com/thomaspoignant/go-feature-flag"
documentation = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"
keywords = ["feature flags", "feature toggles", "go-feature-flag", "gofeatureflag", "openfeature", "open-feature"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    "openfeature-sdk>=0.8.4,<0.9.0",
    "openfeature-provider-ofrep>=0.2.0",
    "pydantic>=2.5.2",
    "urllib3>=2.1.0",
    "wasmtime>=41.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/thomaspoignant/go-feature-flag/issues"
"Source Code" = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"
Documentation = "https://github.com/thomaspoignant/go-feature-flag/tree/main/openfeature/providers/python-provider"

[dependency-groups]
dev = [
    "pytest>=7.4,<9.0",
    "black>=23.10.1,<26.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pytest-docker>=2.0.1,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "gofeatureflag_python_provider/**",
]

exclude = [
    "wasm-releases/**"
]

[tool.hatch.build.targets.sdist]
exclude = [
    "wasm-releases/**"
]